# dpcpp-mcml

./: .gitignore  CMakeLists.txt  arch.vsdx  build_cuda.sh  diplom.docx  perf-record.sh  performance.xlsx  presentation.pptx  script.py  template-diplom.docx  test_gpu_rtx.txt  test_gpu_uhd.txt  testing.xlsx  Отчет практика 2023.docx
cuda/: build_cuda.sh  dpcpp-mcml-cuda  dpcpp-mcml-cuda-local  dpcpp-mcml-cuda-shared  performance-gpu-0.txt  performance-gpu-1.txt  run.sh
src/: iofile.hpp  main.cpp  matrix.hpp  mcml.hpp  pipe.hpp
src/common/: iofile.hpp  matrix.hpp
src/configs/: default.h
src/emulator/: main.cpp  mcml.hpp
